# Patterns

./: .gitignore  CMakeLists.txt
Patterns/: CMakeLists.txt
Patterns/Creational/: CMakeLists.txt
Patterns/Creational/AbstractFactory/: CMakeLists.txt
Patterns/Creational/AbstractFactory/tests/: CMakeLists.txt  main.cpp
